fix(stomp): receipt